Fixed scroll arrow disappearing on Safari issue and modified how the description lays out with the animal image no matter what dimension it is as long as it is in portrait mode

--- a/src/css/newstyle.css
+++ b/src/css/newstyle.css
@@ -81,10 +81,6 @@
     -1px -1px 0 #ff00ff;  /* magenta offset left-up */
   }
 
-  /* #outsideButton_Container {
-    display: block;
-  } */
-
   #insideButton_Container {
     display: none;
   }
@@ -103,33 +99,11 @@
     /* outer shadow */
     transition: transform 0.2s ease;
   }
-  
-  /* #start-button2:hover {
-    background: linear-gradient(to bottom, #ffe80c, #ffcf20ed);
-    box-shadow: inset -5px -5px 12px rgba(255, 255, 255, 0.6), inset 5px 5px 12px rgba(204, 153, 0, 0.5), 4px 4px 20px rgb(177 43 128 / 100%);
-  } */
 
   #start-button2:active {
     background: linear-gradient(to bottom, #ffe80c, #ffcf20ed);
     box-shadow: inset -5px -5px 12px rgba(255, 255, 255, 0.6), inset 5px 5px 12px rgba(204, 153, 0, 0.5), 4px 4px 20px rgb(177 43 128 / 100%);
   }
-
-  /* @keyframes change_BackButtonColor {
-    50% {
-      background-color: #ad00ab;
-      color: #FEDB04;
-      border-right: solid 3px black;
-    }
-    100% {
-      background-color: #FEDB04;
-      color: #ad00ab;
-      border-right: none;
-    }
-  }
-
-  .back-button.mobile-click {
-    animation: change_BackButtonColor 0.3s forwards;
-  } */
 
   #animalImageContainer {
     white-space: nowrap;
@@ -254,14 +228,7 @@
     background-color: #FEDB04;
     height: 100%;
     /* width: 21dvh; */
-    
   }
-  
-  /* .back-button:hover {
-    background-color: #ad00ab;
-    color: #FEDB04;
-    border-right: solid 3px black;
-  } */
 
   @keyframes change_BackButtonColor {
     50% {
@@ -329,14 +296,6 @@
   .answer-button.mobile-click {
     animation: changeColor 0.3s forwards;
   }
-
-  /* .answer-button:hover {
-    background-color: #ad00ab;
-    color: #ffdd00;
-  } */
-  /* .answer-button:active {
-    background-color: #ad00ab;
-  } */
   
   #result-header{
     font-family:"Poppins";
@@ -458,14 +417,6 @@
   
  } 
 
-  /* #polaroid-animal-image {
-    grid-column: 1;
-    grid-row: 2;
-    max-width: 80%;
-    height: 99%;
-    max-height: 977px;
-    margin-top: -48%;
-  } */
   #polaroid-animal-image {
     width: clamp(200px ,228px ,270px);
   }
@@ -481,34 +432,24 @@
   
   
   .scroll-arrow {
-    display: block;
-    align-self: center;
-    justify-self: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     grid-column: 2;
     grid-row: 2;
     margin-top: -1dvh;
-    margin-left: 6.5dvh;
+    /* margin-left: 6.5vh; */
     font-size: 5dvh;
     color: #FEDB04;
     text-shadow: -1.5px -1.5px 3px rgba(46, 101, 103, 0.5), 1.5px -1.5px 3px rgba(46, 101, 103, 0.5), -1.5px 1.5px 3px rgba(46, 101, 103, 0.5), 1.5px 1.5px 3px rgba(46, 101, 103, 0.5);
     animation: moveArrow 2s infinite ease-in-out;
     z-index: 1;
+    /* transform: translateX(-50%); */
+    /* transform-origin: center center; */
+    /* -webkit-transform: translateZ(0);
+    transform: translateZ(0);
+    will-change: transform; */
 }
-  
-  .desc-container {
-    /* display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    grid-template-areas:
-      "topsection topsection"
-      "advantages disadvantages"
-      "motivators demotivators";
-    gap: 20px;
-    margin: 0 auto;
-    position: relative;
-    padding: 50px 100px;
-    height: 100vh;
-    width: 80vw; */
-  }
   
   .description {
     grid-area: description;
@@ -531,9 +472,7 @@
     color: #000;
     font-size: clamp(0.5rem, 1.2rem, 1.7rem);
   }
-  .card ul{
-    /* padding-top: 10px; */
-  }
+
   .blue {
     background: #8adffd;
 }
@@ -737,52 +676,11 @@
   
   /* pushpa */
   @media only screen and (max-width: 500px) {
-    .desc-container {
-      /* margin: 0px 10px 0px 10px;
-      grid-template-columns: 1fr;
-      grid-template-areas:
-        "topsection"
-        "advantages"
-        "disadvantages"
-        "motivators"
-        "demotivators";
-        row-gap: 20px;
-        column-gap: 0px; */
-    }
-  
-    .topsection {
-      flex-direction: column;
-      text-align: center;
-    }
-  
-    .animal-assets {
-      top: auto;
-      bottom: -30px;
-      left: 50%;
-      transform: translateX(-50%);
-    }
-  
     .buttons {
       flex-direction: column;
       gap: 10px;
       padding: 0px 15px;
     }
-
-  .topsection{
-    padding: 0;
   }
-  /* .description_h2{
-    font-size:1vw;
-  } */
-  /* #descriptionText{
-    font-size: 1vw;
-  } */
-  /* .card ul li {
-    font-size: 1vw;
-   
-} */
-
-}
   /* pushpa */
   
-
