--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -566,7 +566,7 @@ right: 10%;
   z-index: 50;
 }
 
-@keyframes moveArrow {
+/* @keyframes moveArrow {
   0% {
     transform: translateX(-50%) translateY(0);
   }
@@ -575,6 +575,15 @@ right: 10%;
   }
   100% {
     transform: translateX(-50%) translateY(0);
+  }
+} */
+
+@keyframes moveArrow {
+  0%, 100% {
+    transform: translateY(0);
+  }
+  50% {
+    transform: translateY(10px);
   }
 }
 
